--- a/src/Components/HeaderImage.css
+++ b/src/Components/HeaderImage.css
@@ -19,6 +19,8 @@
   padding-top: 30px;
   display: flex;
   justify-content: center;
+  position: relative;
+  z-index: 10;
 }
 
 .header-image-mobile img {
